k8s/grafana/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: grafana-gateway
  namespace: grafana # Or your preferred gateway namespace
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "grafana.bramble"
spec:
  gatewayClassName: istio
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
